tests/method_properties/method_properties.exp
Error ----------------------------------------------------------------------------------------------------- test.js:5:28

Cannot get `this.constructor.x` because property `x` is missing in statics of `C` [1]. [prop-missing]

   test.js:5:28
   5|   qux() { this.constructor.x; }
                                 ^

References:
   test.js:1:7
   1| class C {
            ^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:7:3

Cannot get `C.x` because property `x` is missing in statics of `C` [1]. [prop-missing]

   test.js:7:3
   7| C.x;
        ^

References:
   test.js:1:7
   1| class C {
            ^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:8:9

Cannot get `(new C).foo` because property `foo` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   test.js:8:9
   8| (new C).foo.x;
              ^^^ [1]

References:
   test.js:3:3
   3|   foo() { }
        ^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:13:6

Cannot call `foo.bar` because undefined [1] is not a function. [not-a-function]

   test.js:13:6
   13| (foo.bar(): string); // error, could be undefined
            ^^^

References:
   exports_optional_prop.js:4:9
    4|   bar?: () => string
               ^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:16:6

Cannot call `x.bar` because undefined [1] is not a function. [not-a-function]

   test.js:16:6
   16|   (x.bar(): string); // error. caused by `f(foo)`; annotate x to track it down.
            ^^^

References:
   exports_optional_prop.js:4:9
    4|   bar?: () => string
               ^^^^^^^^^^^^ [1]



Found 5 errors
